--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="Navigation2-notes">
       <img
         class="Animated-logo3-notes"
-        src="../Images/Group 32.png"
+        src="images/Group 32.png"
         alt="Logo"
         class="Logo"
       />
@@ -65,7 +65,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Circuit System</p>
           </div>
-          <img src="Images/Circuit.png" alt="" class="Resource-Image" />
+          <img src="images/Circuit.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -86,7 +86,7 @@
           
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
           </div>
-          <img src="Images/Power Systems.png" alt="" class="Resource-Image" />
+          <img src="images/Power Systems.png" alt="" class="Resource-Image" />
 
         </div>
 
@@ -126,7 +126,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Electrical Machines</p>
           </div>
-          <img src="Images/Machines.png" alt="" class="Resource-Image" />
+          <img src="images/Machines.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -146,7 +146,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Analog Electronics</p>
           </div>
-          <img src="Images/Analog.png" alt="" class="Resource-Image" />
+          <img src="images/Analog.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -167,7 +167,7 @@
             <p class="Topic_Name">Digital Communication</p>
           </div>
           <img
-            src="Images/Digital Communication.png  "
+            src="images/Digital Communication.png  "
             alt=""
             class="Resource-Image"
           />
@@ -191,7 +191,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Network Analysis</p>
           </div>
-          <img src="Images/network Anlysis.png" alt="" class="Resource-Image" />
+          <img src="images/network Anlysis.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -211,7 +211,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Probablity (PSLP)</p>
           </div>
-          <img src="Images/Probablity.png" alt="" class="Resource-Image" />
+          <img src="images/Probablity.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -231,7 +231,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Data Base Management System</p>
           </div>
-          <img src="Images/SQL.png" alt="" class="Resource-Image" />
+          <img src="images/SQL.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -251,7 +251,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Java</p>
           </div>
-          <img src="Images/Java.png" alt="" class="Resource-Image" />
+          <img src="images/Java.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -271,7 +271,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Applied Maths 2</p>
           </div>
-          <img src="Images/Maths.png" alt="" class="Resource-Image" />
+          <img src="images/Maths.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -291,7 +291,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Engineering Mechanics</p>
           </div>
-          <img src="Images/Mechanics.png" alt="" class="Resource-Image" />
+          <img src="images/Mechanics.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -312,7 +312,7 @@
             <p class="Topic_Name">Programming in C</p>
           </div>
           <img
-            src="Images/Programming in C.png"
+            src="images/Programming in C.png"
             alt=""
             class="Resource-Image"
           />
@@ -336,7 +336,7 @@
             <p class="Topic_Name">Indian Constitution</p>
           </div>
           <img
-            src="Images/Indian Constitution.png"
+            src="images/Indian Constitution.png"
             alt=""
             class="Resource-Image"
           />
@@ -360,7 +360,7 @@
             <p class="Topic_Name">Electrical Science</p>
           </div>
           <img
-            src="Images/Electrical Science.png"
+            src="images/Electrical Science.png"
             alt=""
             class="Resource-Image"
           />
@@ -384,7 +384,7 @@
             <p class="Topic_Name">Environmental Studies</p>
           </div>
           <img
-            src="Images/Environmental Studies.png"
+            src="images/Environmental Studies.png"
             alt=""
             class="Resource-Image"
           />
@@ -407,7 +407,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Applied Physics 2</p>
           </div>
-          <img src="Images/Applied Physics.png" alt="" class="Resource-Image" />
+          <img src="images/Applied Physics.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -429,7 +429,7 @@
             <p class="Topic_Name">Computer Networks</p>
           </div>
           <img
-            src="Images/Computer Networks.png"
+            src="images/Computer Networks.png"
             alt=""
             class="Resource-Image"
           />
@@ -452,7 +452,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Web Technology</p>
           </div>
-          <img src="Images/Web technology.png" alt="" class="Resource-Image" />
+          <img src="images/Web technology.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -472,7 +472,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Artificial Intelligance</p>
           </div>
-          <img src="Images/AIML.png" alt="" class="Resource-Image" />
+          <img src="images/AIML.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -492,7 +492,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">MPMC - Microprocessors and Microntrollers</p>
           </div>
-          <img src="Images/Microprocessors.png" alt="" class="Resource-Image" />
+          <img src="images/Microprocessors.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -513,7 +513,7 @@
             <p class="Topic_Name">Operating System</p>
           </div>
           <img
-            src="Images/Operating System.png"
+            src="images/Operating System.png"
             alt=""
             class="Resource-Image"
           />
@@ -536,7 +536,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Compiler Design</p>
           </div>
-          <img src="Images/Compiler Design.png" alt="" class="Resource-Image" />
+          <img src="images/Compiler Design.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
