--- a/index.html
+++ b/index.html
@@ -552,6 +552,6 @@
       </section>
     </section>
 
-    <script src="Script2.js" async defer></script>
+    <script src="script.js" async defer></script>
   </body>
 </html>
