--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="Navigation2-notes">
       <img
         class="Animated-logo3-notes"
-        src="../Images/Group 32.png"
+        src="images/Group 32.png"
         alt="Logo"
         class="Logo"
       />
@@ -63,7 +63,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Circuit System</p>
           </div>
-          <img src="../Images/Circuit.png" alt="" class="Resource-Image" />
+          <img src="images/Circuit.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -83,7 +83,7 @@
             <p class="Topic_Name">Power System</p>
           </div>
           <img
-            src="../Images/Power Systems.png"
+            src="images/Power Systems.png"
             alt=""
             class="Resource-Image"
           />
@@ -105,7 +105,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Electrical Machines</p>
           </div>
-          <img src="../Images/Machines.png" alt="" class="Resource-Image" />
+          <img src="images/Machines.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -124,7 +124,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Analog Electronics</p>
           </div>
-          <img src="../Images/Analog.png" alt="" class="Resource-Image" />
+          <img src="images/Analog.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -144,7 +144,7 @@
             <p class="Topic_Name">Digital Communication</p>
           </div>
           <img
-            src="../Images/Digital Communication.png  "
+            src="images/Digital Communication.png  "
             alt=""
             class="Resource-Image"
           />
@@ -167,7 +167,7 @@
             <p class="Topic_Name">Network Analysis</p>
           </div>
           <img
-            src="../Images/network Anlysis.png"
+            src="images/network Anlysis.png"
             alt=""
             class="Resource-Image"
           />
@@ -188,7 +188,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Probablity (PSLP)</p>
           </div>
-          <img src="../Images/Probablity.png" alt="" class="Resource-Image" />
+          <img src="images/Probablity.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -206,7 +206,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Data Base Management System</p>
           </div>
-          <img src="../Images/SQL.png" alt="" class="Resource-Image" />
+          <img src="images/SQL.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -225,7 +225,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Java</p>
           </div>
-          <img src="../Images/Java.png" alt="" class="Resource-Image" />
+          <img src="images/Java.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -244,7 +244,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Applied Maths 2</p>
           </div>
-          <img src="../Images/Maths.png" alt="" class="Resource-Image" />
+          <img src="images/Maths.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -262,7 +262,7 @@
           <div class="Resources_Head_Left">
             <p class="Topic_Name">Engineering Mechanics</p>
           </div>
-          <img src="../Images/Mechanics.png" alt="" class="Resource-Image" />
+          <img src="images/Mechanics.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -282,7 +282,7 @@
             <p class="Topic_Name">Programming in C</p>
           </div>
           <img
-            src="../Images/Programming in C.png"
+            src="images/Programming in C.png"
             alt=""
             class="Resource-Image"
           />
@@ -327,7 +327,7 @@
             <p class="Topic_Name">Electrical Science</p>
           </div>
           <img
-            src="../Images/Electrical Science.png"
+            src="images/Electrical Science.png"
             alt=""
             class="Resource-Image"
           />
@@ -350,7 +350,7 @@
             <p class="Topic_Name">Environmental Studies</p>
           </div>
           <img
-            src="../Images/Environmental Studies.png"
+            src="images/Environmental Studies.png"
             alt=""
             class="Resource-Image"
           />
@@ -374,7 +374,7 @@
             <p class="Topic_Name">Applied Physics 2</p>
           </div>
           <img
-            src="../Images/Applied Physics.png"
+            src="images/Applied Physics.png"
             alt=""
             class="Resource-Image"
           />
@@ -398,7 +398,7 @@
             <p class="Topic_Name">Computer Networks</p>
           </div>
           <img
-            src="../Images/Computer Networks.png"
+            src="images/Computer Networks.png"
             alt=""
             class="Resource-Image"
           />
@@ -421,7 +421,7 @@
             <p class="Topic_Name">Web Technology</p>
           </div>
           <img
-            src="../Images/Web technology.png"
+            src="images/Web technology.png"
             alt=""
             class="Resource-Image"
           />
@@ -444,7 +444,7 @@
             <!-- <p class="Last_Updated">Last Updated: 2 days Ago</p> -->
             <p class="Topic_Name">Artificial Intelligance</p>
           </div>
-          <img src="../Images/AIML.png" alt="" class="Resource-Image" />
+          <img src="images/AIML.png" alt="" class="Resource-Image" />
         </div>
 
         <p class="Topic_Discription">
@@ -465,7 +465,7 @@
             <p class="Topic_Name">MPMC - Microprocessors and Microntrollers</p>
           </div>
           <img
-            src="../Images/Microprocessors.png"
+            src="images/Microprocessors.png"
             alt=""
             class="Resource-Image"
           />
@@ -489,7 +489,7 @@
             <p class="Topic_Name">Operating System</p>
           </div>
           <img
-            src="../Images/Operating System.png"
+            src="images/Operating System.png"
             alt=""
             class="Resource-Image"
           />
@@ -512,7 +512,7 @@
             <p class="Topic_Name">Compiler Design</p>
           </div>
           <img
-            src="../Images/Compiler Design.png"
+            src="images/Compiler Design.png"
             alt=""
             class="Resource-Image"
           />
