--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <p class="Topic_Name">Indian Constitution</p>
           </div>
           <img
-            src="../Images/Indian Constitution.png"
+            src="images/Indian Constitution.png"
             alt=""
             class="Resource-Image"
           />
