--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 
 <html>
   <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JG4BZN8Z0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-2JG4BZN8Z0');
+</script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Resource Collection</title>
