--- a/index.html
+++ b/index.html
@@ -547,5 +547,6 @@
       <a href="https://www.learningfolks.in/" class="LearningFolks">Click here</a>
     </p>
 
+    <script src="script.js" async defer></script>
   </body>
 </html>
