--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           using different components.
         </p>
         <div class="notes-download">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/CNS-Circuit-and-Systems-6453c427e4b04e60968b7413?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -102,7 +102,7 @@
           generation, power distribution etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/PS-Power-Systems-6454e04ce4b0da941cd89517?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -121,7 +121,7 @@
           as magnetic circuits.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Electrical-Machines-6454e07ce4b0da941cd89521?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -140,7 +140,7 @@
           oscillators.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Analog-Electronics-2-6453e4c1e4b0aac1f0dbfcab?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -163,7 +163,7 @@
           and digital signal processing.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/DC-Digital-Communications-6454e5d7e4b06a52cd2bd15a?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -185,7 +185,7 @@
           such as network theorems, two-port networks, and signal analysis.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/NAN-Network-Analysis-and-Synthesis-6453e49ce4b0aac1f0dbfca7?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -203,7 +203,7 @@
           occurrence, including topics such as probability distributions etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/PSLP-6453c4ace4b04e60968b742c?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -222,7 +222,7 @@
           database architecture etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/DBMS-Database-Management-System-64528573e4b0ab49a13f004a?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -241,7 +241,7 @@
           programming , DSA etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/JAVA-64528532e4b0ab49a13f001a?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -259,7 +259,7 @@
           equations, Laplace transforms, and Fourier series.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Applied-Mathematics-2-64567c78e4b0ceb7b107b0cf?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -278,7 +278,7 @@
           statics, dynamics etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/EM-Engineering-Mechanics-64567aeee4b0983633b1c198?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -301,7 +301,7 @@
           types ,pointers etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Programming-in-C-64566cafe4b0919eaac4fa55?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -323,7 +323,7 @@
           structure, powers, and functions of the government.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Indian-Constitution-64567931e4b0919eaac4fddc?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -346,7 +346,7 @@
           electromagnetism, and electrical machines.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Electrical-Science-64567700e4b084acc00b2acd?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -369,7 +369,7 @@
           pollution, and climate change.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/EVSEnvironmental-Studies-64566f9be4b0742e49679e38?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -393,7 +393,7 @@
           electromagnetism.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Applied-Physics-II-64567bd8e4b0fe9f63cc5a1f?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -416,7 +416,7 @@
           technologies used to connect computers and other devices.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Computer-Networks-6450a075e4b045c03f7a6c42?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -440,7 +440,7 @@
           server-side programming.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Web-Technology-6450a0c3e4b045c03f7a6c51?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -460,7 +460,7 @@
           specific goals.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Artificial-Intelligence-6450a128e4b045c03f7a6c78?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -484,7 +484,7 @@
           etc.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/MPMC---Microprocessors-and-Microntrollers-6450a163e4b045c03f7a6ca4?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -507,7 +507,7 @@
           and software resources and provides services to application software.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Operating-System-644ff06fe4b0a1072ff44e8f?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
@@ -531,7 +531,7 @@
           code is efficient and error-free.
         </p>
         <div class="Visit_Views">
-          <a href="" class="Visit_Resource"
+          <a href="https://courses.learningfolks.in/courses/Compiler-Design-6450a052e4b045c03f7a6c19?affCode=X9DZPX" class="Visit_Resource"
             ><button class="Visit_Button" id="my-button">Get Access</button></a
           >
         </div>
