--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     </section>
      <p class="Note">
       Note: We have collaborated with Learning Folks to offer paid notes to our
-      members through affiliate links on our website. Please note that any
+      members. Please note that any
       problems that may arise from your purchase are not solely our
       responsibility.
       <br />
