--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       >
     </div>
     <p class="EarlyAccess">#Early Access on High Demand</p>
-
+<p class="EarlyAccess">Website lauching Soon...</p>
     <div class="dropdown">
       <p class="filter">Filter:</p>
       <select name="course-filter" id="semester-filter">
