--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         href=https://chat.whatsapp.com/EpgnHMCeNYx8vYi59oly9l"
         class="Community-CTA"
         id="Community-Notes"
-        >Join Students Community</a
+        >Join Bunkers Community 😎</a
       >
       <a
         href="https://discord.gg/JdYAdbh99p"
