--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+            <div class="loading-container">
+      <div class="loading-animation"></div>
+      <div class="quote-container">
+        <p id="quote"> Use Code <strong><em>LBT35</strong></em></strong> To get 35% Off on all Courses</p>
+      </div>
+    </div>
     <section class="Navigation2-notes">
       <img
         class="Animated-logo3-notes"
