--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <div class="Cta" id="notes-cta">
       <a
-        href=https://chat.whatsapp.com/EpgnHMCeNYx8vYi59oly9l"
+        href="https://chat.whatsapp.com/EpgnHMCeNYx8vYi59oly9l"
         class="Community-CTA"
         id="Community-Notes"
         >Join Bunkers Community 😎</a
