--- a/index.html
+++ b/index.html
@@ -545,9 +545,7 @@
     </section>
      <p class="Note">
       Note: We have collaborated with Learning Folks to offer paid notes to our
-      members. Please note that any
-      problems that may arise from your purchase are not solely our
-      responsibility.
+      members. Please note that contact learningfolksqueries@gmail.com for any issues arises.
       <br />
       Learn More about Learning Folks :
       <a href="https://www.learningfolks.in/" class="LearningFolks">Click here</a>
