--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         href="https://chat.whatsapp.com/EpgnHMCeNYx8vYi59oly9l"
         class="Community-CTA"
         id="Community-Notes"
-        >Join Bunkers Community 😎</a
+        >Join Community 😎</a
       >
       <a
         href="https://discord.gg/JdYAdbh99p"
