--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         >Join Discord Server</a
       >
     </div>
-    <p class="EarlyAccess">#Early Access on High Demand</p>
-<p class="EarlyAccess">Website lauching Soon...</p>
+    
+<p class="EarlyAccess"> Whole Website lauching Soon... </p>
     <div class="dropdown">
       <p class="filter">Filter:</p>
       <select name="course-filter" id="semester-filter">
