--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       >
     </div>
     
-<p class="EarlyAccess"> Whole Website lauching Soon... </p>
+<p class="EarlyAccess"> Whole Website lauching Soon...🚀 </p>
     <div class="dropdown">
       <p class="filter">Filter:</p>
       <select name="course-filter" id="semester-filter">
