--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
 <p class="EarlyAccess"> Whole Website lauching Soon...🚀 </p>
     <div class="dropdown">
-      <p class="filter">Filter:</p>
+      <p class="filter">Filter Semester:</p>
       <select name="course-filter" id="semester-filter">
         <option value="All">All</option>
         <option value="Semester 2">Semester 2</option>
